Updated GLES3.0 Added CameraTexture

--- a/Isv.csproj
+++ b/Isv.csproj
@@ -43,13 +43,14 @@
     <Reference Include="Mono.Android" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="OpenTK" />
+    <Reference Include="OpenTK-1.0" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="PaintingView.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="ShaderProgram.cs" />
+    <Compile Include="CameraTexture.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Properties\AndroidManifest.xml">
