--- a/Properties/AndroidManifest.xml
+++ b/Properties/AndroidManifest.xml
@@ -4,4 +4,5 @@
 	</application>
 	<uses-feature android:glEsVersion="0x00020000" />
 	<uses-sdk />
+	<uses-permission android:name="android.permission.CAMERA" />
 </manifest>
