--- a/Properties/AndroidManifest.xml
+++ b/Properties/AndroidManifest.xml
@@ -5,4 +5,6 @@
 	<uses-feature android:glEsVersion="0x00020000" />
 	<uses-sdk />
 	<uses-permission android:name="android.permission.CAMERA" />
+	<uses-feature android:name="android.hardware.camera" />
+	<uses-feature android:name="android.hardware.camera.autofocus" />	
 </manifest>
