--- a/Isv.csproj
+++ b/Isv.csproj
@@ -48,11 +48,13 @@
     <Reference Include="OpenTK-1.0" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PaintingView.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
-    <Compile Include="MainActivity.cs" />
-    <Compile Include="ShaderProgram.cs" />
-    <Compile Include="CameraTexture.cs" />
+    <Compile Include="Sources\MainActivity.cs" />
+    <Compile Include="Sources\PaintingView.cs" />
+    <Compile Include="Sources\ShaderProgram.cs" />
+    <Compile Include="Sources\Texture\CameraTexture.cs" />
+    <Compile Include="Sources\Texture\MovieTexture.cs" />
+    <Compile Include="Sources\Texture\VideoTextureBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Properties\AndroidManifest.xml">
@@ -86,6 +88,8 @@
     <Folder Include="Resources\drawable-xhdpi\" />
     <Folder Include="Resources\drawable-xxhdpi\" />
     <Folder Include="Resources\shaders\" />
+    <Folder Include="Sources\" />
+    <Folder Include="Sources\Texture\" />
   </ItemGroup>
   <ItemGroup>
     <AndroidAsset Include="Resources\shaders\Simple.fsh" />
